--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.6.0",
+    "@react-native-firebase/messaging": "^15.6.0",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/material-top-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "googleapis": "^108.0.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-pager-view": "^6.0.0",
